# xwayland.com

./: Cargo.toml  LICENSE  README.md
content/: 2025-03-14-abc.md  2025-03-20-ahoragado.md  2025-03-20-yuji.md  2025-05-01-wayland-is-the-present.md
src/: main.rs
static/: blog.css  style.css
templates/: base.html  home.html  post.html
